@@ -90,17 +90,14 @@ public class MiscUtil {
 	public static <T> void resize(ObjectArrayList<T> list, int size, Class<T> valueCls) {
 		try {
 			while (list.size() < size) {
-				list.add(valueCls != null? valueCls.newInstance() : null);
+				list.add(valueCls != null? valueCls.getDeclaredConstructor().newInstance() : null);
 			}
 
 			while (list.size() > size) {
 				list.removeQuick(list.size() - 1);
 			}
 		}
-		catch (IllegalAccessException e) {
-			throw new IllegalStateException(e);
-		}
-		catch (InstantiationException e) {
+		catch (ReflectiveOperationException e) {
 			throw new IllegalStateException(e);
 		}
 	}
