@@ -40,12 +40,9 @@ public class ObjectStackList<T> extends StackList<T> {
 	@Override
 	protected T create() {
 		try {
-			return cls.newInstance();
+			return cls.getDeclaredConstructor().newInstance();
 		}
-		catch (InstantiationException e) {
-			throw new IllegalStateException(e);
-		}
-		catch (IllegalAccessException e) {
+		catch (ReflectiveOperationException e) {
 			throw new IllegalStateException(e);
 		}
 	}
